# Flight-Operations-Manager

./: LICENSE  README.md
Flight_Operations_Manager/: .gitignore  CMakeLists.txt  flight_info.txt  main.cpp  mainwindow.cpp
Flight_Operations_Manager/include/database/: Database.h  FileDatabase.h  SQLiteDatabase.h
Flight_Operations_Manager/include/gui/: FlightDialog.h  MainWindow.h  PassengerDialog.h  ProgressDialog.h  SeatMapWidget.h  TicketDialog.h
Flight_Operations_Manager/include/models/: Airline.h  Baggage.h  Flight.h  FlightStatus.h  Passenger.h  Seat.h  SeatLayout.h  Ticket.h
Flight_Operations_Manager/src/: main.cpp
Flight_Operations_Manager/src/database/: Database.cpp  FileDatabase.cpp  SQLiteDatabase.cpp
Flight_Operations_Manager/src/gui/: FlightDialog.cpp  MainWindow.cpp  PassengerDialog.cpp  PassengerDialog.ui  ProgressDialog.cpp  SeatMapWidget.cpp  TicketDialog.cpp  flightdialog.ui  mainwindow.ui  ticketdialog.ui
Flight_Operations_Manager/src/models/: Airline.cpp  Baggage.cpp  Flight.cpp  FlightStatus.cpp  Passenger.cpp  Seat.cpp  Ticket.cpp
